--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label>Dlaczego powinieneś wybrać właśnie nas?<br>Nie musisz ale w naszych szkoleniach dokładamy jak największych starać aby kursańci mogli zdobyć jak największą wiedzę o bezpieczeństwie w pracy. 
                 Nasze usługi nie są kosztowne, oraz działamy niemal że w całej Polsce.<br>To właśnie wybranie naszych usłóg sprawia że twoja firma będzie bezpieczna pod względem BHP.</label>
             
-                <br><label><b>Czym właściwie jest BHP?</b><br>
+                <br><label class="link"><b>Czym właściwie jest BHP?</b><br>
                 BHP, jest to zbiór zasad określających sposób wykonywania pracy, a przede wszystkim sposób zapewnienia pracownikom warunków pracy, aby jej wykonywanie było bezpieczne i higieniczne.
                 </label>
             </div>
